--- a/module/Frontend/view/v1/layout/header.phtml
+++ b/module/Frontend/view/v1/layout/header.phtml
@@ -9,7 +9,7 @@ $action = $paramsRouter['action'];
         <div class="top-bar">
             <div class="container">
                 <div class="row">
-                    <div class="col-sm-6 responsive-width-top">
+                    <div class="col-sm-6 responsive-width-top hidden-xs">
                         <div class="social">
                             <div class="social-icon">
                                 <a href="<?php echo My\General::SOCIAL_FACEBOOK_URL; ?>"><i class="fa fa-facebook"></i></a>
