--- a/module/Frontend/view/v1/frontend/index/index.phtml
+++ b/module/Frontend/view/v1/frontend/index/index.phtml
@@ -17,9 +17,9 @@
                                     <thead class="cf">
                                         <tr>
                                             <th class="text-center color-title"><i class="fa fa-bookmark-o" aria-hidden="true"></i> Tiêu đề</th>
-                                            <th class="text-center color-location" width="100px"><i class="fa fa fa-globe" aria-hidden="true"></i> Khu vực</th>
-                                            <th class="text-center color-properties" width="85px"><i class="fa fa-shopping-cart" aria-hidden="true"></i> Nhu cầu</th>
-                                            <th class="text-center" width="93px"><i class="fa fa-calendar-o" aria-hidden="true"></i> Cập nhật</th>
+                                            <th class="text-center color-location hidden-xs" width="100px"><i class="fa fa fa-globe" aria-hidden="true"></i> Khu vực</th>
+                                            <th class="text-center color-properties hidden-xs" width="85px"><i class="fa fa-shopping-cart" aria-hidden="true"></i> Nhu cầu</th>
+                                            <th class="text-center hidden-xs" width="93px"><i class="fa fa-calendar-o" aria-hidden="true"></i> Cập nhật</th>
                                         </tr>
                                     </thead>
                                     <tbody>
@@ -38,11 +38,11 @@
                                                 <tr id="item-<?php echo $arrContent['cont_id'] ?>">
                                                     <td style="vertical-align: middle">
                                                         <?php if ($flag == true): ?>
-                                                            <a style="text-decoration: none" href="<?php echo $this->serverUrl() . $this->Url('view-user-info', ['fullname' => \My\General::getSlug($this->arrUserList[$arrContent['user_created']]['user_fullname']), 'userId' => $this->arrUserList[$arrContent['user_created']]['user_id']]); ?>" class="red-tooltip mg-r-5" data-toggle="tooltip" title="<?php echo $this->arrUserList[$arrContent['user_created']]['user_fullname']; ?>">
+                                                            <a class="hidden-xs" style="text-decoration: none" href="<?php echo $this->serverUrl() . $this->Url('view-user-info', ['fullname' => \My\General::getSlug($this->arrUserList[$arrContent['user_created']]['user_fullname']), 'userId' => $this->arrUserList[$arrContent['user_created']]['user_id']]); ?>" class="red-tooltip mg-r-5" data-toggle="tooltip" title="<?php echo $this->arrUserList[$arrContent['user_created']]['user_fullname']; ?>">
                                                                 <img src="<?php echo $avatar_user; ?>" class="thumb-image-avatar">
                                                             </a>
                                                         <?php else: ?>
-                                                            <a style="text-decoration: none" href="javascript:;" class="red-tooltip" data-toggle="tooltip" title="<?php echo json_decode($arrContent['user_info'], true)['user_fullname']; ?>">
+                                                            <a class="hidden-xs" style="text-decoration: none" href="javascript:;" class="red-tooltip" data-toggle="tooltip" title="<?php echo json_decode($arrContent['user_info'], true)['user_fullname']; ?>">
                                                                 <img src="<?php echo $avatar_user; ?>" class="thumb-image-avatar">
                                                             </a>
                                                         <?php endif; ?>
@@ -52,13 +52,13 @@
                                                         <span>(<i class="fa fa-eye"> <?php echo $arrContent['cont_views']; ?></i> | <i class="fa fa-comment-o" aria-hidden="true"> <?php echo $arrContent['total_comment']; ?></i>)</span>
                                                         <img src="<?php echo \My\General::IMAGE_SVIP ?>">
                                                     </td>
-                                                    <td class="text-center color-location" style="vertical-align: middle">
+                                                    <td class="text-center color-location hidden-xs" style="vertical-align: middle">
                                                         <?php echo empty($arrContent['dist_id']) ? 'Toàn tỉnh' : $arrLocation[$arrContent['dist_id']]['dist_name']; ?>
                                                     </td>
-                                                    <td class="text-center color-properties" style="vertical-align: middle">
+                                                    <td class="text-center color-properties hidden-xs" style="vertical-align: middle">
                                                         <?php echo $this->arrPropertiesList[$arrContent['prop_id']]['prop_name']; ?>
                                                     </td>
-                                                    <td class="text-center" style="vertical-align: middle">
+                                                    <td class="text-center hidden-xs" style="vertical-align: middle">
                                                         <?php echo My\General::formatDateString($arrContent['updated_date']); ?>
                                                     </td>
                                                 </tr>
@@ -156,9 +156,9 @@
                                     <thead class="cf">
                                         <tr>
                                             <th class="text-center color-title"><i class="fa fa-bookmark-o" aria-hidden="true"></i> Tiêu đề</th>
-                                            <th class="text-center color-location" width="100px"><i class="fa fa fa-globe" aria-hidden="true"></i> Khu vực</th>
-                                            <th class="text-center color-properties" width="85px"><i class="fa fa-shopping-cart" aria-hidden="true"></i> Nhu cầu</th>
-                                            <th class="text-center" width="93px"><i class="fa fa-calendar" aria-hidden="true"></i> Cập nhật</th>
+                                            <th class="text-center color-location hidden-xs" width="100px"><i class="fa fa fa-globe" aria-hidden="true"></i> Khu vực</th>
+                                            <th class="text-center color-properties hidden-xs" width="85px"><i class="fa fa-shopping-cart" aria-hidden="true"></i> Nhu cầu</th>
+                                            <th class="text-center hidden-xs" width="93px"><i class="fa fa-calendar" aria-hidden="true"></i> Cập nhật</th>
                                         </tr>
                                     </thead>
                                     <tbody>
@@ -176,11 +176,11 @@
                                             <tr id="item-<?php echo $arrContent['cont_id'] ?>">
                                                 <td style="vertical-align: middle">
                                                     <?php if ($flag == true): ?>
-                                                        <a style="text-decoration: none" href="<?php echo $this->serverUrl() . $this->Url('view-user-info', ['fullname' => \My\General::getSlug($this->arrUserList[$arrContent['user_created']]['user_fullname']), 'userId' => $this->arrUserList[$arrContent['user_created']]['user_id']]); ?>" class="red-tooltip mg-r-5" data-toggle="tooltip" title="<?php echo $this->arrUserList[$arrContent['user_created']]['user_fullname']; ?>">
+                                                        <a class="hidden-xs" style="text-decoration: none" href="<?php echo $this->serverUrl() . $this->Url('view-user-info', ['fullname' => \My\General::getSlug($this->arrUserList[$arrContent['user_created']]['user_fullname']), 'userId' => $this->arrUserList[$arrContent['user_created']]['user_id']]); ?>" class="red-tooltip mg-r-5" data-toggle="tooltip" title="<?php echo $this->arrUserList[$arrContent['user_created']]['user_fullname']; ?>">
                                                             <img src="<?php echo $avatar_user; ?>" class="thumb-image-avatar">
                                                         </a>
                                                     <?php else: ?>
-                                                        <a style="text-decoration: none" href="javascript:;" class="red-tooltip mg-r-5" data-toggle="tooltip" title="<?php echo json_decode($arrContent['user_info'], true)['user_fullname']; ?>">
+                                                        <a class="hidden-xs" style="text-decoration: none" href="javascript:;" class="red-tooltip mg-r-5" data-toggle="tooltip" title="<?php echo json_decode($arrContent['user_info'], true)['user_fullname']; ?>">
                                                             <img src="<?php echo $avatar_user; ?>" class="thumb-image-avatar">
                                                         </a>
                                                     <?php endif; ?>
@@ -191,13 +191,13 @@
                                                     <span class="success">(<i class="fa fa-eye"> <?php echo $arrContent['cont_views']; ?></i> | <i class="fa fa-comment-o" aria-hidden="true"> <?php echo $arrContent['total_comment']; ?></i>)</span>
                                                     <?php if ($arrContent['vip_type'] == \My\General::VIP_CATE_PAGE): ?><img src="<?php echo \My\General::IMAGE_VIP ?>"><?php endif; ?>
                                                 </td>
-                                                <td class="text-center color-location" style="vertical-align: middle">
+                                                <td class="text-center color-location hidden-xs" style="vertical-align: middle">
                                                     <?php echo empty($arrContent['dist_id']) ? 'Toàn tỉnh' : $arrLocation[$arrContent['dist_id']]['dist_name']; ?>
                                                 </td>
-                                                <td class="text-center color-properties" style="vertical-align: middle">
+                                                <td class="text-center color-properties hidden-xs" style="vertical-align: middle">
                                                     <?php echo $this->arrPropertiesList[$arrContent['prop_id']]['prop_name']; ?>
                                                 </td>
-                                                <td class="text-center" style="vertical-align: middle">
+                                                <td class="text-center hidden-xs" style="vertical-align: middle">
                                                     <?php echo My\General::formatDateString($arrContent['created_date']); ?>
                                                 </td>
                                             </tr>
