--- a/module/Frontend/view/v1/frontend/content/detail.phtml
+++ b/module/Frontend/view/v1/frontend/content/detail.phtml
@@ -159,10 +159,13 @@
                     <div class="tags">
                         <div class="col-md-6 col-xs-6">
                             <div class="fb-like" data-href="<?php echo $this->serverUrl() . $this->Url('view-content', ['contentSlug' => $this->arrContent['cont_slug'], 'contentId' => $this->arrContent['cont_id']]) ?>" data-layout="button_count" data-action="like" data-show-faces="true" data-share="true"></div>
+                            
                         </div>
-                        <!--                        <div class="col-md-6 col-xs-6">
-                                                    <div class="g-plusone" data-annotation="inline" data-width="300" data-href="https://plus.google.com/102479865548966763788"></div>
-                                                </div>-->
+                                                <div class="col-md-6 col-xs-6">
+                                                    <g:plusone></g:plusone>
+                                                </div>
+                        <!--<script src="https://apis.google.com/js/platform.js" async defer></script>-->
+  
                     </div>
                     <div class="tags">
                         <i class="fa fa-tags"></i>
